<resources>
    <string name="app_name">Harry\'s App Portfolio</string>

    <string name="okay">OK</string>
    <string name="action_about">About</string>
    <string name="my_title">Udacity Nanodegree Apps!</string>
    <string name="media_streamer">SPOTIFY STREAMER</string>
    <string name="super_duo1">SCORES APP</string>
    <string name="super_duo2">LIBRARY APP</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>
    <string name="materialize">XYZ READER</string>
    <string name="ant_terminator">BUILD IT BIGGER</string>
</resources>
